@@ -486,6 +486,12 @@ namespace libtorrent
 				peer_log(">>> SET_TOS[ tos: %d e: %s ]", m_ses.settings().peer_tos, ec.message().c_str());
 #endif
 			}
+#if TORRENT_USE_IPV6
+			else if (m_remote.address().is_v6() && m_ses.settings().peer_tos != 0)
+			{
+				m_socket->set_option(traffic_class(m_ses.settings().peer_tos), ec);
+			}
+#endif
 		}
 
 		if (t && t->ready_for_connections())
@@ -5591,6 +5597,12 @@ namespace libtorrent
 			peer_log(">>> SET_TOS[ tos: %d e: %s ]", m_ses.settings().peer_tos, ec.message().c_str());
 #endif
 		}
+#if TORRENT_USE_IPV6
+		else if (m_remote.address().is_v6() && m_ses.settings().peer_tos != 0)
+		{
+			m_socket->set_option(traffic_class(m_ses.settings().peer_tos), ec);
+		}
+#endif
 
 #ifndef TORRENT_DISABLE_EXTENSIONS
 		for (extension_list_t::iterator i = m_extensions.begin()
@@ -5604,7 +5616,7 @@ namespace libtorrent
 		setup_send();
 		setup_receive();
 	}
-	
+
 	// --------------------------
 	// SEND DATA
 	// --------------------------
